# hosvd-testing

./: .gitignore  CMakeLists.txt  README.md  plot_compression.py  plot_hosvd_stability.py  plot_ls_stability.py  plot_qr_memory.py  plot_qr_svd_reproduction.py
src/: bench_compression.cpp  bench_hosvd_stability.cpp  bench_qr_memory.cpp  bench_qr_svd_reproduction.cpp  benchmark.cpp  ls_stability.cpp  main.cpp  qr_decomposition.cpp  qr_decomposition.hpp  qr_st_hosvd.cpp  qr_st_hosvd.hpp  st_hosvd.cpp  st_hosvd.hpp  utils.hpp
